# image-convolution-algorithms

./: .gitignore  make_plots.py  readme.md
src/: CMakeLists.txt  main.cpp
src/convolutions/: deriche_convolution.cpp  deriche_convolution.hpp  discrete_convolution.cpp  discrete_convolution.h  discrete_convolution.hpp  recursive_convolution.cpp  recursive_convolution.h  recursive_convolution.hpp
src/core/: convolution.cpp  convolution.h  convolution.hpp  types.h  types.hpp  utility.cpp  utility.h  utility.hpp
src/demo/: convolution_demo.cpp  convolution_demo.hpp  convolution_io.cpp  convolution_io.hpp  delta_function_demo.cpp  delta_function_demo.hpp
